# smolldot-test

./: Cargo.toml  tfchain_dev.json
src/: main.rs
