[package]
name = "smolldot-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smoldot-light = "0.3.0"
env_logger = "0.10.0"

# `std` feature
# Add here the crates that cannot function without the help of the operating system or environment.
async-std = { version = "1.12.0", optional = true }
parking_lot = { version = "0.12.1", optional = true }

[features]
default = ["std"]
std = ["async-std", "parking_lot"]